@@ -1,5 +1,7 @@
 === master
 
+* Allow setting a default for a column that already has a default on Microsoft SQL Server (jeremyevans)
+
 * Fix keyword argument separation warnings on Ruby master branch in csv_serializer plugin (jeremyevans)
 
 * Add association_multi_add_remove plugin for adding/removing multiple associated objects in a single method call (AlexWayfer, jeremyevans) (#1641)
